tests/baselines/reference/controlFlowInstanceof(strict=true).errors.txt
controlFlowInstanceof.ts(46,11): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
controlFlowInstanceof.ts(47,21): error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
controlFlowInstanceof.ts(48,21): error TS2564: Property 'c' has no initializer and is not definitely assigned in the constructor.
controlFlowInstanceof.ts(88,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
uglify.js(2,16): error TS7006: Parameter 'val' implicitly has an 'any' type.


==== controlFlowInstanceof.ts (4 errors) ====
    // Repros from #10167
    
    function f1(s: Set<string> | Set<number>) {
        s = new Set<number>();
        s;  // Set<number>
        if (s instanceof Set) {
            s;  // Set<number>
        }
        s;  // Set<number>
        s.add(42);
    }
    
    function f2(s: Set<string> | Set<number>) {
        s = new Set<number>();
        s;  // Set<number>
        if (s instanceof Promise) {
            s;  // Set<number> & Promise<any>
        }
        s;  // Set<number>
        s.add(42);
    }
    
    function f3(s: Set<string> | Set<number>) {
        s;  // Set<string> | Set<number>
        if (s instanceof Set) {
            s;  // Set<string> | Set<number>
        }
        else {
            s;  // never
        }
    }
    
    function f4(s: Set<string> | Set<number>) {
        s = new Set<number>();
        s;  // Set<number>
        if (s instanceof Set) {
            s;  // Set<number>
        }
        else {
            s;  // never
        }
    }
    
    // More tests
    
    class A { a: string }
              ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
    class B extends A { b: string }
                        ~
!!! error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
    class C extends A { c: string }
                        ~
!!! error TS2564: Property 'c' has no initializer and is not definitely assigned in the constructor.
    
    function foo(x: A | undefined) {
        x;  // A | undefined
        if (x instanceof B || x instanceof C) {
            x;  // B | C
        }
        x;  // A | undefined
        if (x instanceof B && x instanceof C) {
            x;  // B & C
        }
        x;  // A | undefined
        if (!x) {
            return;
        }
        x;  // A
        if (x instanceof B) {
            x;  // B
            if (x instanceof C) {
                x;  // B & C
            }
            else {
                x;  // B
            }
            x;  // B
        }
        else {
            x;  // A
        }
        x;  // A
    }
    
    // X is neither assignable to Y nor a subtype of Y
    // Y is assignable to X, but not a subtype of X
    
    interface X {
        x?: string;
    }
    
    class Y {
        y: string;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    }
    
    function goo(x: X) {
        x;
        if (x instanceof Y) {
            x.y;
        }
        x;
    }
    
    // Repro from #27282
    
    declare const x: (() => void)|null;
    declare const ctor: Function;
    
    if (x instanceof ctor) {
        x();
    }
    
    // Repro from #27550 (based on uglify code)
==== uglify.js (1 errors) ====
    /** @constructor */
    function AtTop(val) { this.val = val }
                   ~~~
!!! error TS7006: Parameter 'val' implicitly has an 'any' type.
    /** @type {*} */
    var v = 1;
    if (v instanceof AtTop) {
        v.val
    }
    